@@ -8,6 +8,8 @@ Revision history for libev, a high-performance and full-featured event loop.
         - EXPERIMENTAL: default the method to operator () in ev++.h,
           to make it nicer to use functors (requested by Benedek László).
         - fixed const object callbacks in ev++.h.
+        - replaced loop_ref argument of watcher.set (loop) by a direct
+          ev_loop * in ev++.h, to avoid clashes with functor patch.
 
 3.49 Wed Nov 19 11:26:53 CET 2008
 	- ev_stat watchers will now use inotify as a mere hint on
